# dev-infra

api-gen/rendering/: BUILD.bazel  index.ts  processing.ts
api-gen/rendering/entities/: categorization.ts  renderables.ts  traits.ts
api-gen/rendering/transforms/: class-transforms.ts  module-name.ts
bazel/api-gen/manifest/: index.ts
bazel/api-gen/manifest/test/: BUILD.bazel  fake-extracted-apis.ts  manifest.spec.ts
