load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//bazel/esbuild:index.bzl", "esbuild")

package(default_visibility = ["//api-gen:__subpackages__"])

esbuild(
    name = "bin",
    entry_point = ":index.ts",
    external = [
        "@angular/compiler-cli",
        "marked",
        "preact",
        "preact-render-to-string",
    ],
    format = "esm",
    output = "bin.mjs",
    platform = "node",
    target = "es2022",
    deps = [
        ":render_api_to_html_lib",
        "@npm//@angular/compiler-cli",
        "@npm//@bazel/runfiles",
        "@npm//marked",
        "@npm//preact",
        "@npm//preact-render-to-string",
    ],
)

ts_library(
    name = "render_api_to_html_lib",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
    ]),
    devmode_module = "commonjs",
    tsconfig = "//:tsconfig",
    deps = [
        "@npm//@angular/compiler",
        "@npm//@angular/compiler-cli",
        "@npm//@bazel/runfiles",
        "@npm//@types/marked",
        "@npm//@types/node",
        "@npm//marked",
        "@npm//preact",
        "@npm//preact-render-to-string",
    ],
)

# Action binary for the api_gen bazel rule.
nodejs_binary(
    name = "render_api_to_html",
    data = [
        ":bin",
        "@npm//@angular/compiler",
        "@npm//@angular/compiler-cli",
        "@npm//@bazel/runfiles",
        "@npm//marked",
        "@npm//preact",
        "@npm//preact-render-to-string",
    ],
    entry_point = "bin.mjs",
    # Do not use the NodeJS linker because:
    #  - it's brittle and causes race conditions on Windows.
    #  - it requires additional work to setup the runtime linker.
    templated_args = [
        "--bazel_patch_module_resolver",
        "--node_options=--preserve-symlinks-main",
    ],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["**/*"]),
)
